Restyled and refactored edit recipe page

--- a/static/css/components/page-backgrounds.scss
+++ b/static/css/components/page-backgrounds.scss
@@ -50,6 +50,7 @@
     background-image: url('../images/adils-photography-419432-unsplash.jpg');
 }
 
-.add-recipe-bg {
+.add-recipe-bg,
+.edit-recipe-bg {
     background-image: url('../images/adils-photography-419432-unsplash.jpg');
 }
